Refactored the command system. See tests for usage examples.