@@ -1,30 +1,30 @@
 package dev.rosewood.rosegarden.command.argument;
 
-import dev.rosewood.rosegarden.RosePlugin;
-import dev.rosewood.rosegarden.command.framework.ArgumentParser;
-import dev.rosewood.rosegarden.command.framework.RoseCommandArgumentHandler;
-import dev.rosewood.rosegarden.command.framework.RoseCommandArgumentInfo;
+import dev.rosewood.rosegarden.command.framework.Argument;
+import dev.rosewood.rosegarden.command.framework.ArgumentHandler;
+import dev.rosewood.rosegarden.command.framework.CommandContext;
+import dev.rosewood.rosegarden.command.framework.InputIterator;
 import dev.rosewood.rosegarden.utils.StringPlaceholders;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class EnumArgumentHandler<T extends Enum<T>> extends RoseCommandArgumentHandler<T> {
+public class EnumArgumentHandler<T extends Enum<T>> extends ArgumentHandler<T> {
 
-    public EnumArgumentHandler(RosePlugin rosePlugin) {
-        super(rosePlugin, null); // This is a special case and will be handled by the preprocessor
+    protected EnumArgumentHandler(Class<T> handledEnumClass) {
+        super(handledEnumClass);
     }
 
     @Override
-    protected T handleInternal(RoseCommandArgumentInfo argumentInfo, ArgumentParser argumentParser) {
-        String input = argumentParser.next();
+    public T handle(CommandContext context, Argument argument, InputIterator inputIterator) {
+        String input = inputIterator.next();
         T[] enumConstants = this.getHandledType().getEnumConstants();
         Optional<T> value = Stream.of(enumConstants)
                 .filter(x -> x.name().equalsIgnoreCase(input))
                 .findFirst();
 
-        if (!value.isPresent()) {
+        if (value.isEmpty()) {
             StringPlaceholders placeholders = StringPlaceholders.of(
                     "enum", this.handledType.getSimpleName(),
                     "input", input,
@@ -45,18 +45,11 @@ public class EnumArgumentHandler<T extends Enum<T>> extends RoseCommandArgumentH
     }
 
     @Override
-    protected List<String> suggestInternal(RoseCommandArgumentInfo argumentInfo, ArgumentParser argumentParser) {
-        argumentParser.next();
+    public List<String> suggest(CommandContext context, Argument argument, String[] args) {
         return Stream.of(this.getHandledType().getEnumConstants())
                 .map(Enum::name)
                 .map(String::toLowerCase)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @SuppressWarnings("unchecked")
-    public void preProcess(RoseCommandArgumentInfo argumentInfo) {
-        this.handledType = (Class<T>) argumentInfo.getType();
+                .toList();
     }
 
 }
