@@ -1,32 +1,30 @@
 package dev.rosewood.rosegarden.command.argument;
 
-import dev.rosewood.rosegarden.RosePlugin;
-import dev.rosewood.rosegarden.command.argument.SelectorPlayerArgumentHandler.SelectorPlayer;
-import dev.rosewood.rosegarden.command.framework.ArgumentParser;
-import dev.rosewood.rosegarden.command.framework.RoseCommandArgumentHandler;
-import dev.rosewood.rosegarden.command.framework.RoseCommandArgumentInfo;
+import dev.rosewood.rosegarden.command.framework.Argument;
+import dev.rosewood.rosegarden.command.framework.ArgumentHandler;
+import dev.rosewood.rosegarden.command.framework.CommandContext;
+import dev.rosewood.rosegarden.command.framework.InputIterator;
 import dev.rosewood.rosegarden.utils.StringPlaceholders;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.Player;
 
-public class SelectorPlayerArgumentHandler extends RoseCommandArgumentHandler<SelectorPlayer> {
+public class SelectorPlayerArgumentHandler extends ArgumentHandler<Player> {
 
-    public SelectorPlayerArgumentHandler(RosePlugin rosePlugin) {
-        super(rosePlugin, SelectorPlayer.class);
+    protected SelectorPlayerArgumentHandler() {
+        super(Player.class);
     }
 
     @Override
-    protected SelectorPlayer handleInternal(RoseCommandArgumentInfo argumentInfo, ArgumentParser argumentParser) {
-        String input = argumentParser.next();
+    public Player handle(CommandContext context, Argument argument, InputIterator inputIterator) {
+        String input = inputIterator.next();
         if (input.startsWith("@")) {
             // Running a selector, try to find exactly one entity which must be a player
             List<Entity> entities;
             try {
-                entities = Bukkit.selectEntities(argumentParser.getContext().getSender(), input);
+                entities = Bukkit.selectEntities(context.getSender(), input);
             } catch (Exception e) {
                 throw new HandledArgumentException("argument-handler-player-selector-syntax");
             }
@@ -38,26 +36,23 @@ public class SelectorPlayerArgumentHandler extends RoseCommandArgumentHandler<Se
                 throw new HandledArgumentException("argument-handler-player-selector-multiple");
 
             Entity selected = entities.get(0);
-            if (!(selected instanceof Player))
+            if (!(selected instanceof Player player))
                 throw new HandledArgumentException("argument-handler-player-selector-entity");
 
-            return new SelectorPlayer((Player) selected);
+            return player;
         }
 
         Player player = Bukkit.getPlayer(input);
         if (player == null)
             throw new HandledArgumentException("argument-handler-player", StringPlaceholders.of("input", input));
-        return new SelectorPlayer(player);
+        return player;
     }
 
     @Override
-    protected List<String> suggestInternal(RoseCommandArgumentInfo argumentInfo, ArgumentParser argumentParser) {
-        argumentParser.next();
-        List<String> suggestions = new ArrayList<>(Arrays.asList("@p", "@r"));
+    public List<String> suggest(CommandContext context, Argument argument, String[] args) {
+        List<String> suggestions = new ArrayList<>(List.of("@p", "@r"));
         suggestions.addAll(Bukkit.getOnlinePlayers().stream().map(Player::getName).toList());
         return suggestions;
     }
-
-    public record SelectorPlayer(Player player) { }
 
 }
